# edge-vision-yolo-rs

./: ARCHITECTURE.md  Cargo.toml  README.md
docs/: bench-plan.md
src/: lib.rs  main.rs
src/camera/: mod.rs
src/control/: clamps.rs  intent.rs  mod.rs
src/detector/: mod.rs
src/mavlink/: mod.rs  offboard.rs
src/multiview/: mod.rs
src/safety/: watchdog.rs
src/visualizer/: mod.rs
