[package]
name = "edge-vision-yolo-rs"
version = "0.1.0"
edition = "2021"
authors = ["Simon Holm <simonholm@users.noreply.github.com>"]
description = "Edge vision prototype in Rust (YOLO + ONNX, civilian)"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"

opencv = { version = "0.88", default-features = false, features = ["clang-runtime"] }

ort = "2.0.0-rc.6"
ndarray = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
